compiler/test/conformance/testdata/errors/24_annotation_typed_decl.yz
`cue: bar`
a Int = 2

main: {
    print("ok")
}
